--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ header .row{
     text-align:center;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
@@ -232,17 +233,21 @@ h1{
         color: #1a202c;
         line-height: 1.25;
         font:30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
 }
 .header__description--para{
     text-align:center;
     margin:16px;
     display: flex;
     align-items: center;
-    flex-direction: row;
 }
 .header__email{
     width:100%;
-    max-width:448px;
+    max-width 450px;
     height:68px;
     position:relative;
     display: flex;
@@ -302,8 +307,7 @@ button {
 
 .header__description, .header__img--wrapper{
     width:100%;
-    max-width:512px;
-    align-items: center;
+    max-width:1200px;
 }
 
 
@@ -381,7 +385,7 @@ features*/
 }
 
 .feature__para{
-    max-width:none;
+    max-width: 500px;
     margin-top: 16px;
     font-size: 16px;
     color: rgb(124, 139, 161);
@@ -414,8 +418,8 @@ section Quality
 
 }
 .quality__description{
-    margin-right: 0;
-    padding-right: 48px;
+    margin-right: 32;
+    width: 55vw;
   
     
 }
@@ -440,11 +444,12 @@ section Quality
 #quality
 .section__title, #values  .section__title{
     line-height: 1.25;
-    font-size: 36px;
+    font-size: 32px;
     font-weight:900;
     color: rgb(36, 62, 99);
     margin:16px 0;
     letter-spacing: .025em;
+    width:35vw;
 }
 
 .section__para{
@@ -452,7 +457,9 @@ section Quality
     font-weight:500;
     color: #7c8ba1;
     line-height:1.625;
-    margin:0;
+    width: 35vw;
+    text-align: center;
+
 
 }
 
@@ -479,7 +486,7 @@ section Quality
 .quality__img{
     z-index:1;
     width:100%;
-    height:50vh;
+    height:60vh;
     width:40vw;
   
 }
@@ -501,12 +508,12 @@ section Quality
 
 .quality__img--wrapper {
     border-radius: 4px;
-    border: 1px solid rgb (229, 231, 235);
+    border: 1px solid rgb(229, 231, 235);
     position: relative;
     margin: 0 56px;
     z-index: 2;
     display: flex;
-    max-width: 560px;
+    
 }
 
 
@@ -553,7 +560,7 @@ img{width:100%;}
     fill:currentColor;
 }
 .steps__description{
-    padding-left: 16px;
+    margin: 56px;
     width:50%;
 
 }
@@ -586,8 +593,8 @@ img{width:100%;}
 .steps__description{
     display: flex;
     flex-direction: column;
-    margin-left: 24px;
-    max-width: 320px;
+    margin-left: 16px;
+    max-width: 312px;
 }
 .step__title{
     font-weight: 600;
@@ -603,30 +610,39 @@ img{width:100%;}
     line-height:2;
 }
 
+/*
+Value section*/
+
 .container__values{
     padding:96px 32px;
+
 }
-.values__row{
+#values .row{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.values__row{
+
+.row{
     width:100%;
     max-width:1200px;
     margin:0 auto;
 }
-.values__description, .values__img{
-    width:80%;
-    padding: 32px 16px 32pc, 0;
+
+.values__description{
+    width:50%;
+    padding:0px 64px 0 0;
+    
 }
+
+
 .section__tag{
     font-size:16px;
     color: #6415ff;
     letter-spacing:1.6px;
     font-weight:700;
     text-transform: uppercase;
-    margin-bottom:px;
+
 }
 
 #value .section__title{
@@ -637,6 +653,8 @@ img{width:100%;}
 #quality .section__title,
 #value .section__title{
     line-height:1.25;
+}
+.section__title{
     font-size:36px;
     font-weight: 900;
     color:rgb(36, 62, 99);
@@ -644,31 +662,38 @@ img{width:100%;}
     letter-spacing: 0.025em;
 
 }
-    
-
-
 .section__para{
     font-size:16px;
     font-weight:500;
     color:#7c8ba1;
     line-height:1.625;
-    max-width:50%;
-    text-align: center;
+    
 }
 .values__list{
-    width:1200px;
-    max-width:315px;
+    max-width:20rem;
+    flex-direction: column;
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    
 
 }
+
 .value:nth-of-type(1){
     margin-top:32px;
     margin-right:32px;
 }
-.value__title{
+.value{
+    align-items: flex-start;
     display: flex;
     flex-direction: column;
 }
-.value:nth-child(1) .value__img--wrapper{
+.value__title{
+    display: flex;
+    align-items: center;
+}
+.value:nth-child(1)
+.value__img--wrapper{
     background-color: #9ae6b4;
 }
 .value__img--wrapper{
@@ -678,19 +703,20 @@ img{width:100%;}
     align-items: center;
     width: 36px;
     height:36px;
-    margin-bottom:-30px;
 
 }
 .value__img{
-    width:20px;
-    height:20px;
-    
+    width: 20px;
+    height: 20px;
 }
+
 .value__name{
-    margin-left:56px;
+    margin-left:12px;
     font-size:20px;
     font-weight:bold;
-    color:#243e63
+    color:#243e63;
+    
+    
 }
 
 .value__para{
@@ -702,15 +728,15 @@ img{width:100%;}
 .value:nth-of-type(2) {
     margin-top:32px;
 }
+
+.value:nth-child(2) .value__img--wrapper{
+    background-color: #feb2b2;
+}
 .value{
     margin-right: 2rem;
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    
-}
-.value:nth-child(2) .value__img--wrapper{
-    background-color: #feb2b2;
 }
 
 #values .btn{
@@ -726,10 +752,13 @@ img{width:100%;}
     font-weight: bold;
     transition: all 300ms ease;
     cursor:pointer;
+
+
 }
 .values__img{
-    background-color: #f5f5f5;
-    color: #243E63;
+   width:50%;
+
+    
 
 }
 
@@ -740,42 +769,17 @@ img{width:100%;}
 
 
 /* small phones, Tablets, Large Smart Phones */
-@media(max-width:768px){
-
-    .header__description{
-        padding: 0 8px;
-    }
-    h1{
-        font-size:24px;
-    }
-    button{
-        font-size: 16px;
-    }
-
-    .btn__menu{
-        display:block;
-    }
-    .nav__links{
-        display:none;
-    }
+@media(max-width:768){} 
 
 
-}
+
 /*small phones, large smart phones */
 
 @media(max-width:550px){
 
-    .header__img{
-        max-width:100%;
-        height:auto;
-        margin-top: 32px;
-    }
-    .header__description,.header__img--wrapper{
-     width:100%;
-     max-width:512px;
-     margin:0 auto;
-    }
 }
+   
+
 
 
 
