--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ section Quality
     color:#fff;
     font-weight: bold;
     transition: all 300ms ease;
-
+    max-width: 50%;
 }
 .quality__img{
     z-index:1;
@@ -756,7 +756,7 @@ Value section*/
     font-weight: bold;
     transition: all 300ms ease;
     cursor:pointer;
-    max-width:250px
+
 }
 
 
@@ -808,10 +808,9 @@ PRICING
     line-height: 1.625;
 }
 .plans{
-    flex-direction: column;
-    align-items: center;
     display: flex;
     position: relative;
+    flex-direction: row;
     width:100%;
     justify-content: space-between;
 }
@@ -837,7 +836,7 @@ PRICING
 }
 
 .plan:nth-child(1) .plan__stripe,
- .plan:nth-child(1) .plan__button {
+.plan:nth-child(1) .plan__button {
     color: #f7fafc;
     background: linear-gradient(115deg,
     rgb(56, 178, 172) 0%,
@@ -861,8 +860,8 @@ PRICING
     line-height: 1.625;
 }
 .plan:nth-child(odd) .plan__name,
- .plan:nth-child(odd) .plan__price, 
- .plan:nth-child(odd) .plan__target
+.plan:nth-child(odd) .plan__price, 
+.plan:nth-child(odd) .plan__target
  {
     color: #1a202c;
 }
@@ -882,6 +881,12 @@ PRICING
     font-size: 16px;
     letter-spacing: 0.1em;
     color:#a0aec0;
+}
+.plan__name,
+.plan__price,
+.plan__duration{
+    font-weight: bold;
+    line-height: 1.625;
 }
 .plan:nth-child(1) .plan__middle,
 .plan:nth-child(3) .plan__middle {
@@ -919,12 +924,13 @@ PRICING
         max-width: none;
 }      
 
-.plan:nth-child(1) .plan__stripe, .plan:nth-child(1) .plan__button {
+.plan:nth-child(1) .plan__stripe, 
+.plan:nth-child(1) .plan__button {
     color: #f7fafc;
-    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%,
+     rgb(129, 230, 217) 100%);
 }
-
-    .plan__button {
+.plan__button {
         max-width: none;
     }
 .plan__button {
@@ -943,14 +949,184 @@ PRICING
     letter-spacing: 0.05em;
 
     }
-    button{
+ button{
         cursor: pointer;
         border:none;
     }
-    .plan:nth-child(2){
-        background:linear-gradient(135deg, rgb(76, 81, 191)
-        0%, rgb(102, 126, 234)100%);
-    }
+    .plan:nth-child(2) {
+    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+}
+
+
+.plan {
+    position: relative;
+    margin-top: 4rem;
+    display: flex;
+    width: 100%;
+    max-width: 24rem;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 2rem;
+    padding-top: 0.5rem;
+    text-align: center;
+    color: rgb(26 32 44);
+    box-shadow: rgba(0, 0, 0, 0)
+     0px 0px 0px 0px, 
+     rgba(0, 0, 0, 0) 
+     0px 0px 0px 0px,
+     rgba(0, 0, 0, 0.1)
+       0px 1px 3px 0px, 
+    rgba(0, 0, 0, 0.06)
+        0px 1px 2px 0px;
+}
+
+.plan__stripe{
+   position: absolute;
+   left:0px;
+   right:0px;
+   top:0px;
+   height:0.5rem;
+   border-top-left-radius: 0.5rem;
+   border-top-right-radius: 0.5rem;
+ }
+.plan__top {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+    line-height: 1.625;
+}
+.plan:nth-child(2) .plan__name, 
+.plan:nth-child(2) .plan__price, 
+.plan:nth-child(2) .plan__target, 
+.plan:nth-child(2) .plan__duration, 
+.plan:nth-child(2) .plan__feature {
+     background-color: #f7fafa;
+}
+.plan:nth-child(2) .plan__middle {
+    border-top: 2px solid rgb(102, 126, 234);
+    border-bottom: 2px solid rgb(102, 126, 234);
+}
+.plan__middle {
+    margin-left: -2rem;
+    margin-right: -2rem;
+    display: flex;
+    flex: 1 1 0%;
+    flex-direction: column;
+    padding: 2rem;
+}
+
+.plan__bottom {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.plan:nth-child(2).plan__button{
+    max-width: none;
+}
+.plan__button{
+    padding: 0.75rem 2rem;
+    font-weight: 700;
+    transition: all 300ms ease;
+    width: 100%;
+    border-radius: 9999px;
+    padding-top: 1rem;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}  
+
+.plan {
+    position: relative;
+    margin-top: 4rem;
+    display: flex;
+    width: 100%;
+    max-width: 24rem;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background-color: rgb(255 255 255);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 2rem;
+    padding-top: 0.5rem;
+    text-align: center;
+    color: rgb(26 32 44);
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+     rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+     rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+.plan:nth-child(3) .plan__stripe, 
+.plan:nth-child(3) .plan__button
+ {
+    color: #f7fafc;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%,
+     rgb(254, 178, 178) 100%);
+}
+.plan__stripe {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+.plan__top{
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+    line-height: 1.625;
+}
+.plan:nth-child(odd) .plan__name,
+.plan:nth-child(odd) .plan__price, 
+.plan:nth-child(odd) .plan__target
+ {
+    color: #1a202c;
+}
+.plan__button {
+    border-radius: 0.25rem;
+    padding: 0.75rem 2rem;
+    font-weight: 700;
+    color: rgb(247 250 252);
+    transition: all 300ms ease;
+    width: 100%;
+    border-radius: 9999px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
+
+.plans__blob {
+    z-index: -10;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
+    height: 256px;
+    width: 256px;
+    opacity: 0.25;
+}
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/inter/v20/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa2JL7SUc.woff2) format('woff2');
+    unicode-range: U +0460 -052F, U +1C80 -1C8A, U +20B4, U +2DE0 -2DFF, U + A640-A69F, U + FE2E-FE2F;
+}
+
+
+
+
+
+
    
 
 
