--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #f5f5f5;
     color: #243E63;
     scroll-behavior: smooth;
 }
@@ -211,8 +210,6 @@ link:hover{
     max-width:1200px;
     margin:0 auto;
     color: #243e63;
-
-
 }
 header .row{
     display: flex;
@@ -247,7 +244,7 @@ h1{
 }
 .header__email{
     width:100%;
-    max-width 450px;
+    max-width:450px;
     height:68px;
     position:relative;
     display: flex;
@@ -399,7 +396,7 @@ section Quality
 
 #quality .container{
     padding: 96px 32px;
-    background-color: #f5f5f5;
+ 
 }
 
 
@@ -413,7 +410,7 @@ section Quality
     width:100%;
     max-width:1200px;
     margin:0 auto;
-    color: #f5f5f5;;
+
   
 
 }
@@ -520,7 +517,7 @@ section Quality
 
 .steps__container{
     padding: 96px 32px;
-    background-color: #f5f5f5;
+
 }
 #steps .row{
     display: flex;
@@ -1117,14 +1114,153 @@ PRICING
     width: 256px;
     opacity: 0.25;
 }
-@font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/inter/v20/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa2JL7SUc.woff2) format('woff2');
-    unicode-range: U +0460 -052F, U +1C80 -1C8A, U +20B4, U +2DE0 -2DFF, U + A640-A69F, U + FE2E-FE2F;
+
+/*
+  Testimonials
+        */
+
+#testimonials .row{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+.row{
+    width: 100%;
+    margin: 0 auto;
+}
+.testimonials__img{
+    width:40%;
+}
+
+
+.testimonials__description{
+    width: calc(100% 4 40%);
+    display: flex;
+    flex-direction: column;
+    padding-left: 64px;
+}
+.sect__tag{
+    font-size: 16px;
+    color:#6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+
+}
+#testimonials .sect__title{
+    margin-bottom: 24px;
+    line-height: 1.25;
+}
+.sect__title{
+    font-size: 48px;
+    font-weight: 900;
+    color:rgb(36 62 99);
+    margin:16+px 0;
+    letter-spacing: 0.025;
+}
+.section__para{
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+.testimonial{
+    margin-top: 40px;
+}
+.testimonial__rating{
+    color: rbga(246, 173, 85);
+    margin-right: 2px;
+    margin-top: 4px;
+}
+.fa-solid, .fas{
+    font-weight: 900;
+    
+}
+.fa-star{
+    --fa: "\f005";
+}
+.fa-star
+ {
+    color: rgb(246 173 85);
+    display: inline-block;
+    height: 1.25rem;
+    width: 1.25rem;
+}
+.testimonial__title{
+    color: #4a5568;
+    line-height: 1.625;
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+.test__para{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    line-height: 1.625;
+    font-size: 16px;
+    color: rgb(74 85 104);
+}
+.testimonial__bottom{
+    display: flex;
+    justify-content: space-between;
+}
+.testimonial__profile{
+    display: flex;
+    align-items: center;
+}
+.testimonial__img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.testimonial__details{
+    margin-left: 24px;
+}
+.testimonial__name{
+    color: #4a5568;
+    line-height: 1.625;
+    font-size:1.25rem;
+    font-weight:700;
+}
+.testimonial__role{
+    color: #7c8ba1;
+    font-weight: 500;
+    line-height: 1.5;
+}
+.testimonial__buttons{
+    display: flex;
+    align-items: center;
+    
+}
+.testimonial__button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:16px;
+    background:#edf2f7;
+    border-radius: 50%;
+    margin: 0 12px;
+    transition: all 300ms ease;
+}
+.testimonial_button svg{
+    width: 16px;
+    height: 16px;
+}
+.divider{
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+    border-right-width: 1px;
+    width: 0.5px;
+    background-color: #edf2f7;
+    height: 20px;
+}
+
+
 
 
 
