--- a/style.css
+++ b/style.css
@@ -67,10 +67,7 @@ link:hover{
     width:40px;
     height:40px;
     margin-left: 16px;
-
-
 }
-
 
 .nav__title{
     font-size: 32px;
@@ -78,24 +75,49 @@ link:hover{
     color: #243e63;
     display: flex;
 }
-
-.nav__links{
-    display: flex;
-    list-style: none;   
-    gap: 40px;
-    margin-left: 24px;
+.nav__links {
+    align-items: center;
+    padding-bottom:0 0 2px;
 }
+
+.nav__link {
+    font-size: 14px;
+    font-weight: 600;
+    padding-top: 4px;
+    letter-spacing: 0.35px;
+    border-bottom: 2px solid transparent;
+    position: relative;
+    transition: all 300ms;
+}
+.nav__link {
+    margin: 0 24px;
+    padding: 4px 0 0;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+
+
 .nav__link:hover{
     text-decoration: underline;
-}
-.nav__link--primary{
-    background-color: #6415ff;
-    color:#fff;
-    padding:8px 24px;
-    border-radius: 50px;
-    font-weight: 700;
 
 }
+.nav__link--primary{
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 2px;
+    border-radius: 9999px;
+    color: #fff;
+    background-color: #6415ff;
+    line-height: 1.5;
+    border: none;
+    width: auto;
+    transition: all 300ms ease;
+}
+
+
 
 .nav__link--primary:hover{
     background-color: rgba(60, 13, 153);
@@ -115,11 +137,13 @@ link:hover{
 
 .btn__menu{
     background-color: transparent;
-    font-size: 24px;
-    border:none;
-    color:#243e63;
+    border: none;
+    display: none;
     transition: all 300ms ease;
-    display:none;
+}
+
+button {
+    cursor: pointer;
 }
 .btn__menu:hover{
     color:#6415ff;
@@ -129,7 +153,7 @@ link:hover{
 }
 
 
-.menu__backdrop{
+.menu{
     position:fixed;
     top:0;
     left:0;
@@ -145,10 +169,10 @@ link:hover{
     pointer-events: none;
     background-color: rgba(255,255,255,0.97);
 }
-.menu--open .menu__backdrop{
+.menu--open .menu{
     visibility:visible;
     opacity:1;
-    pointer-events: auto;
+    transform: translateX(0);
 }
 .menu--open{
     max-height:100vh;
@@ -188,12 +212,12 @@ link:hover{
 }   
 
 .btn__menu--close{
-    position:absolute;
-    right: 20px;
-    top:10px;
-    padding:8px;
-   
+    position: fixed;
+    top: 24px;
+    right: 18px;
 }
+   
+
 
 
 
@@ -1323,6 +1347,7 @@ PRICING
     display: flex;
     justify-content: center;
     align-items: center;
+    padding:0 32px;
 }
 .start__title{
     color: #f7fafc;
@@ -1392,18 +1417,501 @@ PRICING
     transition: all 300ms ease;
     cursor: pointer;
 }
+/*
+
+footer
+
+     */
+
+.footer__blob--1{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(-80px)
+    translateY(-128px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.footer__blob--2{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(128px)
+    translateY(192px);
+    z-index: 1;
+    opacity: 0.5;
+}
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+footer {
+    padding: 96px 32px;
+    background-color: rgb(100, 21, 255);
+    margin-bottom: -32px;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__columns{
+    margin-top: -48px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.footer__column{
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+
+}
+.footer__column--title{
+    font-weight: 700;
+    color:#f7fafc;
+    line-height: 1.5;
+}
+.footer__column--link:nth-child(2){
+    margin-top: 24px;
+}
+.footer__column--link{
+    color:#f7fafc;
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a{
+    display:inline;
+    text-decoration: none;
+}
+.footer__column--link{
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column {
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+}
+.footer__column--title {
+    font-weight: 700;
+    color: #f7fafc;
+    line-height: 1.5;
+}
 
 
+.footer__column--link:nth-child(2) {
+    margin-top: 24px;
+}
+
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}   
+.footer__column {
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+}
+.footer__column--title {
+    font-weight: 700;
+    color: #f7fafc;
+    line-height: 1.5;
+}
+.footer__column--link:nth-child(2) {
+    margin-top: 24px;
+}
+
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column {
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+}
+.footer__column--title {
+    font-weight: 700;
+    color: #f7fafc;
+    line-height: 1.5;
+}
+
+.footer__column--link:nth-child(2)
+ {
+    margin-top: 24px;
+}
+
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column {
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+}
+.footer__column--title {
+    font-weight: 700;
+    color: #f7fafc;
+    line-height: 1.5;
+}
 
 
+.footer__column--link:nth-child(2) {
+    margin-top: 24px;
+}
 
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
 
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
 
-   
+a {
+    display: inline;
+    text-decoration: none;
+}
+.footer__column--link {
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
 
+a {
+    display: inline;
+    text-decoration: none;
+}
 
+.footer__divider {
+    width: 100%;
+    height: 2px;
+    margin: 64px 0;
+    background: rgb(116, 44, 255);
+}
+.footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__logo {
+    display: flex;
+    align-items: center;
+}
+.footer__logo--img {
+    height: 32px;
+    width: 32px;
+}
+.footer__logo--text {
+    font-size: 20px;
+    color: #f7fafc;
+    font-weight: 900;
+    margin-left: 8px;
+    letter-spacing: 0.05em;
+}
+.footer__copyright {
+    color: #cbd5e0;
+    font-weight: 500;
+}
+.footer__socials {
+    display: flex;
+    align-items: center;
+    margin-left: -16px;
+}
+.footer__social--link {
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
 
+a {
+    text-decoration: none;
+}
+.footer__social--link svg {
+    height: 16px;
+    width: 16px;
+}
+.footer__social--link {
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
 
+a {
+     text-decoration: none;
+}
+.footer__social--link svg {
+    height: 16px;
+    width: 16px;
+}
+.footer__social--link {
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+a {
+    text-decoration: none;
+}
+.footer__social--link svg {
+    height: 16px;
+    width: 16px;
+}
 
 
 /* small phones, Tablets, Large Smart Phones */
