--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     overflow-x: hidden;
 }
 
+header {
+    position: relative;
+}
+
 section {
     padding: 0 32px;
 }
@@ -24,6 +28,10 @@ section {
 nav {
     padding-top: 32px;
     display: flex;
+}
+
+p {
+    line-height: 1.5;
 }
 
 li {
@@ -34,14 +42,19 @@ li {
 .nav__row {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    align-items: center;
 }
-
 .row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
-
+.purple {
+    color: #6415ff;
+}
 .nav__logo {
     display: flex;
     align-items: center;
@@ -74,6 +87,7 @@ li {
     padding-top: 4px;
     border-bottom: 2px solid transparent;
     position: relative;
+    color: #242424;
 
 }
 
@@ -82,16 +96,20 @@ li {
 
 }
 
+
 a {
     display: inline;
     text-decoration: none;
 }
-.nav__link:hover{
+
+.nav__link:hover {
     text-decoration: underline;
 }
-.menu__link:hover{
+
+.menu__link:hover {
     text-decoration: underline;
 }
+
 .login {
     margin-left: 48px;
 }
@@ -108,6 +126,7 @@ a {
     width: auto;
     transition: all 300ms ease;
 }
+
 .nav__link--primary:hover {
     background-color: rgba(80, 17, 204);
     color: white;
@@ -118,6 +137,7 @@ a {
     background-color: transparent;
     border: none;
     transition: all 300ms ease;
+    display: none;
 
 }
 
@@ -166,7 +186,8 @@ button {
     border-radius: 500px;
     border: none;
 }
-.menu__link--primary:hover{
+
+.menu__link--primary:hover {
     text-decoration: none;
 }
 
@@ -202,20 +223,340 @@ button {
     transition: all 300ms ease;
 }
 
+/*header*/
+
+.container {
+    padding: 96px 0;
+}
+
+header .row {
+    align-items: flex-end;
+    display: flex;
+    justify-content: space-between;
+}
+
+header .row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0px;
+}
+
+.header__description {
+    width: 468px;
+}
+
+h1 {
+    font-size: 36px;
+    color: #1a202c;
+    line-height: 1.25;
+}
+
+.header__description--para {
+    font-size: 16px;
+
+}
+
+.header__description--para {
+    margin: 32px 0;
+}
+
+.header__email {
+    width: 100%;
+    max-width: 448px;
+    height: 68px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.email__input {
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: all 300ms auto;
+}
+
+.email__btn {
+    z-index: 2;
+    margin: 8px;
+    height: 50px;
+    border-radius: 500px;
+    width: 160px;
+    border: none;
+    background-color: #6415ff;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    transition: all 300ms ease;
+}
+
+.header__customers--title {
+    margin-top: 80px;
+    color: #a0aec0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.6;
+}
+
+.header__customers {
+    padding-right: 64px;
+}
+
+.header__customers {
+    margin-top: 16px;
+    padding-right: 128px;
+    opacity: 0.5;
+}
+
+img {
+    width: 100%;
+}
+
+.header__img--wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.header__img--wrapper {
+    width: calc(100% - 40%);
+}
+
+.header__img {
+    max-width: 512px;
+}
+
+.header__img {
+    width: 100%;
+}
+
+/* features */
+#features {
+    position: relative;
+}
+
+#features .row__narrow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.row__narrow {
+    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section__tag {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#features .section__title,
+#pricing .section__title {
+    text-align: center;
+}
+
+.section__title {
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    line-height: 1.5;
+    margin: 16px 0;
+    letter-spacing: 0.025em;
+}
+
+.section__para {
+    text-align: center;
+    max-width: 576px;
+}
+
+.section__para {
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.feature {
+    width: calc(100% / 3);
+}
+
+.feature__row {
+    display: flex;
+    align-items: flex-start;
+    padding: 32px 24px;
+}
+
+.feature__img--wrapper {
+    display: flex;
+    padding: 20px;
+    border: 1px solid #e5e7eb;
+}
+
+.feature__img {
+    width: 24px;
+    height: 24px;
+}
+
+.feature__text {
+    max-width: 194px;
+    margin-top: 8px;
+    margin-left: 16px;
+}
+
+.feature__para {
+    margin-top: 16px;
+    font-size: 16px;
+    color: rgb(124, 139, 161);
+    line-height: 2;
+    font-weight: 500;
+}
+
+/* quality work */
+
+.container {
+    padding: 96px 0;
+}
+
+#quality.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.quality__description,
+.quality__img--wrapper {
+    width: 50%;
+}
+
+.quality__description {
+    max-width: 576px;
+    margin-right: 64px;
+}
+
+.section__tag {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#quality.section__titlec #values .section__title {
+    line-height: 1.25;
+}
+
+.section__title {
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36 62 99);
+    margin: 16px 0;
+    letter-spacing: 0.025;
+}
+
+.section__para {
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+    max-width: 398px;
+}
+
+#quality .btn {
+    margin-top: 32px;
+}
+
+.btn{
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border: none;
+    border-radius: 500px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: rgba(80, 17, 204);
+}
+.quality__img--wrapper {
+    border-radius: 4px;
+    border: 1px solid rgb(229, 231, 235);
+    position: relative;
+    margin: 0 56px;
+    z-index: 2;
+    display: flex;
+}
+
+.quality__description, .quality__img--wrapper {
+    width: 50%;
+}
+img {
+    width: 100%;
+}
 
 
 
 
-
-
-
-
-
-
-
-@media(max-width:1200px) {
-    .btn__menu{
-        display:block;
+@media(max-width:1024px) {
+    .nav__links {
+        display: none;
     }
 
+    .btn__menu {
+        display: block;
+    }
+}
+
+
+/*small phones, tablets,large smartphones*/
+@media(max-width:768px) {
+    button {
+        font-size: 18px;
+    }
+
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+}
+
+
+/*small phones, large smartphons*/
+@media (max-width:550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
 }
